Store state in disk